# Advent-of-Code

./: .editorconfig  Cargo.toml  README.md  generate_dirs.sh  go.mod
advent-of-code-2015/: Cargo.toml
advent-of-code-2015/src/: day03.rs  day05.rs  day06.rs  day07.rs  day09.rs  day10.rs  day13.rs  day14.rs  day17.rs  day19.rs  day23.rs  day25.rs
advent-of-code-2017/: Makefile  README.md  go.mod  go.sum  main.go
advent-of-code-2019/: .gitignore  Cargo.toml  Makefile  README.md
advent-of-code-2019/.github/workflows/: pipeline.yaml
advent-of-code-2019/day01/: Cargo.toml
advent-of-code-2019/day01/tests/: web.rs
advent-of-code-2019/day02/: Cargo.toml
advent-of-code-2019/day03/: Cargo.toml
advent-of-code-2019/day03/src/: lib.rs
advent-of-code-2019/day04/: Cargo.toml
advent-of-code-2019/day04/src/: lib.rs
advent-of-code-2019/day05/: Cargo.toml
advent-of-code-2019/day05/tests/: web.rs
advent-of-code-2019/day06/: Cargo.toml
advent-of-code-2019/day06/src/: lib.rs
advent-of-code-2019/day06/tests/: web.rs
advent-of-code-2019/day07/: Cargo.toml
advent-of-code-2019/day07/src/: lib.rs
advent-of-code-2019/day08/: Cargo.toml
advent-of-code-2019/day08/tests/: web.rs
advent-of-code-2019/day09/: Cargo.toml
advent-of-code-2019/day09/src/: lib.rs
advent-of-code-2019/day09/tests/: web.rs
advent-of-code-2019/day11/: Cargo.toml
advent-of-code-2019/day11/src/: lib.rs
advent-of-code-2019/day11/tests/: web.rs
advent-of-code-2019/day12/: Cargo.toml
advent-of-code-2019/day13/: Cargo.toml  Makefile
advent-of-code-2019/day13/src/: arcade.rs  sparse_grid.rs
advent-of-code-2019/day13/tests/: web.rs
advent-of-code-2019/day16/: Cargo.toml  input.txt
advent-of-code-2019/day16/src/: lib.rs  stutter.rs
advent-of-code-2019/day16/tests/: web.rs
advent-of-code-2019/input/2019/: day14.txt  day8.txt
advent-of-code-2019/intcode/: Cargo.toml
advent-of-code-2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  grid.rs  lib.rs  main.rs
advent-of-code-2019/src/day03/: wire.rs
advent-of-code-2019/src/day13/: arcade.rs  sparse_grid.rs
advent-of-code-2019/src/day15/: repair_droid.rs
advent-of-code-2019/www/: package-lock.json  package.json  tsconfig.json
advent-of-code-2019/www/src/: day_02.ts  day_03.ts  day_04.ts  day_05.ts  day_06.ts  day_08.ts  day_09.ts  day_11.ts  day_13.ts  day_16.ts  index.html  style.css  template.ts
advent-of-code-2020/: Cargo.toml  README.md
advent-of-code-2020/input/2020/: day12.txt  day13.txt  day15.txt  day21.txt  day25.txt  day9.txt
advent-of-code-2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  grid.rs  lib.rs  main.rs
advent-of-code-2021/: .env-template  Makefile  README.md  go.mod  go.sum  main.go
common/: Cargo.toml
day01/: Cargo.toml  Makefile  day01.go  day01_test.go
day02/: Cargo.toml  day02.go  day02_test.go
day03/: Cargo.toml  day03.go  day03_test.go
day04/: day04.go  day04_test.go
day05/: Cargo.toml  day05.go  input.txt
day06/: day06.go
day07/: day07.go  (+2 more)
day08/: Cargo.toml
day08/instruction/: jumpInstruction.go
day08/src/: lib.rs
day08/tests/: web.rs
(+343 files in other folders)
