[package]
name = "advent-of-code-2015"
version = "0.1.0"
authors = ["Koenraad Verheyden <github@kvrhdn.dev>"]
edition = "2018"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

lazy_static = "1.4.0"
regex = "1.4.2"
# used when we need backtracking
fancy-regex = "0.4.0"

itertools = "0.9.0"

# used by day04
md5 = "0.7.0"

# used by day12
json = "0.12.4"
