[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Koenraad Verheyden <mail@kvrhdn.dev>"]
edition = "2018"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
maplit = "1.0.2"

bytecount = "0.6.0"
num = "0.2.0"
num-derive = "0.3"
num-traits = "0.2"
