[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Koenraad Verheyden <mail@kvrhdn.dev>"]
edition = "2018"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
bytecount = "0.6"
itertools = "0.9"
lazy_static = "1.4"
maplit = "1.0"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
noisy_float="0.1"
regex = "1.5"

