[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Koenraad Verheyden <mail@kvrhdn.dev>"]
edition = "2018"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
arrayvec = "0.5.2"
itertools = "0.9"
lazy_static = "1.4"
lexical = "5.2.0"
noisy_float = "0.1.13"
num-traits = "0.2"
regex = "1.4"
serde_scan = "0.4"
