[package]
name = "day08"
version = "0.1.0"
authors = ["Koenraad Verheyden <mail@koenraadverheyden.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytecount = "0.6.0"
common = { path = "../common" }
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.2"
