[package]
name = "day12"
version = "0.1.0"
authors = ["Koenraad Verheyden <mail@koenraadverheyden.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
num = "0.2.0"
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.2"
