[package]
name = "day13"
version = "0.1.0"
authors = ["Koenraad Verheyden <mail@koenraadverheyden.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
intcode = { path = "../intcode" }
num-traits = "0.2"
num-derive = "0.3"
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.2"
